--- a/index.html
+++ b/index.html
@@ -1,15 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-   <!-- Mirrored from trendytheme.net/demo/69multi/69/index.html by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 03 Apr 2024 08:59:18 GMT -->
    <head>
       <meta charset="utf-8">
       <meta http-equiv="X-UA-Compatible" content="IE=edge">
       <meta name="viewport" content="width=device-width, initial-scale=1">
-      <meta name="description" content="69 studio is a responsive creative agency template">
+      <meta name="description" content="Erafox is a responsive creative agency template">
       <meta name="keywords" content="portfolio, corporate, business, parallax, creative, agency">
-      <meta name="author" content="trendytheme.net">
+      <meta name="author" content="SquadCube.com">
       <title>Erafoxgroups</title>
       <link rel="shortcut icon" href="assets/images/ico/favicon.png">
+      <link rel="apple-touch-icon-precomposed" sizes="144x144" href="assets/images/ico/apple-touch-icon-144-precomposed.png">
+      <link rel="apple-touch-icon-precomposed" sizes="114x114" href="assets/images/ico/apple-touch-icon-114-precomposed.png">
+      <link rel="apple-touch-icon-precomposed" sizes="72x72" href="assets/images/ico/apple-touch-icon-72-precomposed.png">
+      <link rel="apple-touch-icon-precomposed" href="assets/images/ico/apple-touch-icon-57-precomposed.png">
       <link href="http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,400,300,600,700,800" rel="stylesheet" type="text/css">
       <link href="http://fonts.googleapis.com/css?family=Roboto+Slab:400,700,300" rel="stylesheet" type="text/css">
       <link href="assets/css/animate.css" rel="stylesheet">
@@ -526,7 +529,7 @@
       </section>
      
       <section class="map-section">
-         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3651.6190356031907!2d90.43443631441595!3d23.76096098458425!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3755b8098da100f3%3A0x353f8ffa29807e1a!2sTrendy%20Theme!5e0!3m2!1sen!2sbd!4v1569486248334!5m2!1sen!2sbd" width="100%" height="250" frameborder="0" style="border:0;" allowfullscreen></iframe>
+         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3888.5766889558986!2d80.22896002491774!3d12.934906437377112!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3a525c57e90a6693%3A0x4ad6e3fd867f2ac8!2sChandrasekhar%20Avenue%2C%20Thoraipakkam%2C%20Tamil%20Nadu!5e0!3m2!1sen!2sin!4v1712217884227!5m2!1sen!2sin" width="100%" height="250" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
       </section>
       <section class="contact-section section-padding">
          <div class="container">
@@ -604,11 +607,7 @@
             </div>
          </div>
       </footer>
-      <div id="preloader">
-         <div id="status">
-            <div class="status-mes"></div>
-         </div>
-      </div>
+      
       <script src="assets/js/jquery-2.1.3.min.js"></script>
       <script src="assets/bootstrap/js/bootstrap.min.js"></script>
       <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
