--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                     </li>
                     
                      <li class="dropdown">
-                         <a href="#abou us">About Us</a>
+                         <a href="#about us">About Us</a>
                      </li>
                      <li class="dropdown">
                          <a href="#contact us">Contact Us</a>
@@ -272,7 +272,7 @@
          <div class="container">
             <div class="row">
                <div class="col-md-8 col-md-offset-3">
-                  <h2>About us</h2>
+                  <h2>About <span style="color: red;">us</span></h2>
                   <p>
                      In this competitive era, every business is required to advertise their brand or business. Movicore is a one-stop solution for
                      advertising needs. We are here with more than 7+ years of experience in this creative industry to promote brands and services with 30+ successful clients. And we also have our own indoor shooting floor of around 1200 sq. ft. in Madurai. We work
@@ -289,7 +289,7 @@
          <div class="container">
             <div class="row">
                <div class="col-xs-12 text-center">
-                  <h2 class="section-title">What we do?</h2>
+                  <h2 class="section-title"><span style="color: black;">What we</span> do?</h2>
                   </div>
             </div>
             <div class="row mt-80 text-center">
@@ -535,7 +535,7 @@
          <div class="container">
             <div class="row">
                <div class="col-xs-12 text-center">
-                  <h2 class="section-title">Need Help or Any Project?</h2>
+                  <h2 class="section-title"><span style="color: black;">Contact</span>  <span class="big-text " style="color: red; font-weight: bold;">Us</span></h2>
                   
                </div>
             </div>
