--- a/index.html
+++ b/index.html
@@ -531,7 +531,7 @@
       <section class="map-section">
          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3888.5766889558986!2d80.22896002491774!3d12.934906437377112!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3a525c57e90a6693%3A0x4ad6e3fd867f2ac8!2sChandrasekhar%20Avenue%2C%20Thoraipakkam%2C%20Tamil%20Nadu!5e0!3m2!1sen!2sin!4v1712217884227!5m2!1sen!2sin" width="100%" height="250" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
       </section>
-      <section class="contact-section section-padding">
+      <section class="contact-section section-padding" id="contact us">
          <div class="container">
             <div class="row">
                <div class="col-xs-12 text-center">
